# cvqp

./: .gitignore  README.md  admm.ipynb  admm.py  analysis_utils.py  benchmark.py  benchmark_cvqp.py  benchmark_cvqp_solver.py  benchmark_sum_largest_proj.py  benchmarks.ipynb  cvar_proj.py  cvar_proj_results.pkl  cvqp.py  cvqp_problems.py  cvqp_utils.py  examples.ipynb  examples.py  experiment.py  inventory_management.ipynb  plotting_utils.py  portfolio.ipynb  proj.ipynb  pyproject.toml  setup.py  solve_times.pkl  solve_times_5_5000_1000-100000.pkl  solve_times_admm_5_5000_300000-1000000.pkl  solve_times_script.pkl  sum_largest_proj.cpp  sum_largest_proj.py  timing.ipynb
.github/workflows/: build-wheels.yml  test.yml
cvqp/: projection.py
data/: cvqp_results.pkl  proj_m=10000.pkl  proj_m=100000.pkl  proj_m=1000000.pkl  proj_m=10000000.pkl  proj_m=30000.pkl  proj_m=300000.pkl  proj_m=3000000.pkl
