[tool.poetry]
name = "cvqp"
description = ""
authors = ["David Perez Pineiro", "Eric Luxenberg"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.67.1"
numpy = "^2.1.3"
scipy = "^1.14.1"
cvxpy = "^1.6.0"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
