[tool.poetry]
name = "cvqp"
description = ""
authors = ["David Perez Pineiro", "Eric Luxenberg"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
tqdm = "^4.67.1"
numpy = "^2.1.3"
scipy = "^1.14.1"
cvxpy = "^1.6.0"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
mosek = "^10.2.8"
pyinstrument = "^5.0.0"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
