[tool.poetry]
name = "cvqp"
description = ""
authors = ["David Perez Pineiro", "Eric Luxenberg"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
tqdm = "^4.67.1"
numpy = "^2.1.3"
scipy = "^1.14.1"
cvxpy = "^1.6.0"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
mosek = "^10.2.8"
pyinstrument = "^5.0.0"
pandas = "^2.2.3"

[tool.poetry.group.build.dependencies]
pybind11 = "^2.13.6"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=42", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"
